--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <body>
   <h1>Happy Birthday My Pretti Princess Hnin Nandar Win! 🎂💖</h1>
   <p>I LOVE U so much until the end of the world ! 💕</p>
+  <img src="IMG_9966.JPG" alt="Happy Birthday!" style="width:300px; border-radius:15px;">
   
   <script>
     function createHeart() {
