Update2 index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
   <h1>Happy Birthday My Pretti Princess Hnin Nandar Win! 🎂💖</h1>
   <p>I LOVE U so much until the end of the world ! 💕</p>
   <img src="IMG_9966.JPG" alt="Happy Birthday!" style="width:300px; border-radius:15px;">
+  <p><strong>お誕生日おめでとう！ 愛しい君へ💓、いつも幸せでいてね ! 💖 僕の大切な人。
+        君の笑顔がずっと見られますように。 😘🍀🧸</strong></p>
   
   <script>
     function createHeart() {
